--- a/Spring.csproj
+++ b/Spring.csproj
@@ -116,6 +116,12 @@
     <Compile Include="Messages\BaseMessage.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Pages\UserCardPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pages\UserCardPage.Designer.cs">
+      <DependentUpon>UserCardPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Pages\AddUserPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -169,6 +175,9 @@
     <EmbeddedResource Include="Messages\BaseMessage.resx">
       <DependentUpon>BaseMessage.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Pages\UserCardPage.resx">
+      <DependentUpon>UserCardPage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Pages\AddUserPage.resx">
       <DependentUpon>AddUserPage.cs</DependentUpon>
     </EmbeddedResource>
@@ -217,6 +226,7 @@
     <None Include="pngegg.png" />
     <None Include="password-imgs\icons8-eye-2-48.png" />
     <None Include="password-imgs\icons8-eye-48.png" />
+    <None Include="init\crd.png" />
     <Content Include="springTM.ico" />
     <None Include="springTM.png" />
     <Content Include="VS.ico" />
