issue #1001 related to image size as property 🎳

--- a/Spring.csproj
+++ b/Spring.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Pages\UsersPage.Designer.cs">
       <DependentUpon>UsersPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pages\ValueConverter\BoolToImgConverter.cs" />
     <Compile Include="Pages\ViewModel\AddUserViewModel.cs" />
     <Compile Include="Pages\ViewModel\UsersViewModel.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
