--- a/Spring.csproj
+++ b/Spring.csproj
@@ -42,6 +42,10 @@
     <Reference Include="AccioOracleKit">
       <HintPath>..\AccioOracleKit\bin\Release\AccioOracleKit.dll</HintPath>
     </Reference>
+    <Reference Include="CliWrap, Version=3.6.6.0, Culture=neutral, PublicKeyToken=1c4a4fc2d6886e5a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>tasklib\CliWrap.dll</HintPath>
+    </Reference>
     <Reference Include="Oracle.ManagedDataAccess">
       <HintPath>..\AccioOracleKit\bin\Release\Oracle.ManagedDataAccess.dll</HintPath>
     </Reference>
@@ -94,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccioHelpers\AccioEasyHelpers.cs" />
+    <Compile Include="AccioHelpers\OracleExp.cs" />
     <Compile Include="Data\Account.cs" />
     <Compile Include="Data\Department.cs" />
     <Compile Include="Data\User.cs" />
@@ -241,8 +246,12 @@
     <None Include="password-imgs\icons8-eye-48.png" />
     <None Include="init\crd.png" />
     <None Include="not_available.png" />
+    <Content Include="process\OracleExportDB.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="springTM.ico" />
     <None Include="springTM.png" />
+    <Content Include="tasklib\CliWrap.dll" />
     <Content Include="VS.ico" />
   </ItemGroup>
   <ItemGroup />
