--- a/Spring.csproj
+++ b/Spring.csproj
@@ -127,6 +127,12 @@
     <Compile Include="Pages\ChartsPages\BaseChartPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Pages\ChartsPages\DepartmentsStatisticsPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Pages\ChartsPages\DepartmentsStatisticsPage.Designer.cs">
+      <DependentUpon>DepartmentsStatisticsPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Pages\ChartsPages\UsersStatisticsPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -248,6 +254,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\ChartsPages\BaseChartPage.resx">
       <DependentUpon>BaseChartPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pages\ChartsPages\DepartmentsStatisticsPage.resx">
+      <DependentUpon>DepartmentsStatisticsPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\ChartsPages\UsersStatisticsPage.resx">
       <DependentUpon>UsersStatisticsPage.cs</DependentUpon>
