working in cards designer 😇

--- a/Spring.csproj
+++ b/Spring.csproj
@@ -124,6 +124,12 @@
     <Compile Include="Data\Account.cs" />
     <Compile Include="Data\Department.cs" />
     <Compile Include="Data\User.cs" />
+    <Compile Include="Messages\CardsDesigner.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Messages\CardsDesigner.Designer.cs">
+      <DependentUpon>CardsDesigner.cs</DependentUpon>
+    </Compile>
     <Compile Include="Pages\ChartsPages\BaseChartPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -237,6 +243,9 @@
     <Compile Include="View\MainView\LoginView\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Messages\CardsDesigner.resx">
+      <DependentUpon>CardsDesigner.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Messages\BackupTool.resx">
       <DependentUpon>BackupTool.cs</DependentUpon>
     </EmbeddedResource>
