--- a/Spring.csproj
+++ b/Spring.csproj
@@ -126,6 +126,7 @@
     <Compile Include="AccioHelpers\AccioEasyHelpers.cs" />
     <Compile Include="AccioHelpers\OracleExp.cs" />
     <Compile Include="Data\Account.cs" />
+    <Compile Include="Data\ColumnDataDef.cs" />
     <Compile Include="Data\Department.cs" />
     <Compile Include="Data\User.cs" />
     <Compile Include="Messages\CardsDesigner.cs">
