--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net48" />
+  <package id="AForge.Video" version="2.2.5" targetFramework="net48" />
+  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net48" />
   <package id="CliWrap" version="3.6.6" targetFramework="net48" />
   <package id="Fody" version="6.6.4" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
@@ -10,4 +13,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="ZXing.Net" version="0.16.9" targetFramework="net48" />
 </packages>
